--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,3 +1,11 @@
-<p>
-  signup works!
-</p>
+<section>
+  <form>
+    <mat-form-field>
+      <input type="email" matInput placeholder="Your email" name="" id="">
+    </mat-form-field>
+
+    <mat-form-field>
+      <input type="password" matInput placeholder="Your password" name="" id="">
+    </mat-form-field>
+  </form>
+</section>
